test/analyzer/input_programs/invalid_programs/program14.tea
# invalid since the skip factor
# is not an integer
1..10 by 'non-integer skip factor'